[gd_scene load_steps=7 format=3 uid="uid://bfgttyngrxknk"]

[ext_resource type="Script" path="res://scripts/user_interfaces_scripts/text_box_ui.gd" id="1_ijj2t"]
[ext_resource type="StyleBox" uid="uid://idro3qbiv415" path="res://resources/panel_style/dark_blue_text_box_panel.tres" id="2_1odcw"]
[ext_resource type="StyleBox" uid="uid://bw214osv4w074" path="res://resources/button_style/dark_blue_button_normal.tres" id="2_qm7ug"]
[ext_resource type="StyleBox" uid="uid://dn4ooi3iuri7g" path="res://resources/button_style/dark_blue_button_hover.tres" id="3_52afj"]
[ext_resource type="StyleBox" uid="uid://skv4yoww86p0" path="res://resources/button_style/dark_blue_button_pressed.tres" id="4_im7rw"]
[ext_resource type="StyleBox" uid="uid://dmdgq5u21gfpl" path="res://resources/button_style/dark_blue_button_focus.tres" id="5_yamgs"]

[node name="TextBoxUI" type="CanvasLayer"]
layer = 50
script = ExtResource("1_ijj2t")

[node name="TextBoxMargin" type="MarginContainer" parent="."]
unique_name_in_owner = true
visible = false
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -85.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="Panel" type="Panel" parent="TextBoxMargin"]
layout_mode = 2
theme_override_styles/panel = ExtResource("2_1odcw")

[node name="MarginContainer" type="MarginContainer" parent="TextBoxMargin"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 16

[node name="HBoxContainer" type="HBoxContainer" parent="TextBoxMargin/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="TextStartLabel" type="Label" parent="TextBoxMargin/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 8
text = "*"
horizontal_alignment = 1

[node name="TextAreaLabel" type="Label" parent="TextBoxMargin/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(1, 1)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 8
text = "Sample Text. Sample Text. Sample Text. Sample Text. Sample Text. Sample Text. Sample Text. Sample Text. Sample Text. Sample Text. Sample Text. Sample Text. Sample Text. Sample Text. Sample Text. Sample Text. Sample Text. Sample Text. Sample Text. Sample Text. Sample Text. Sample Text. Sample Text. Sample Text. Sample Text. Sample Text. Sample Text. Sample Text. Sample Text. Sample Text. Sample Text."
autowrap_mode = 2
clip_text = true

[node name="TextEndLabel" type="Label" parent="TextBoxMargin/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(7, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_font_sizes/font_size = 8
text = "v"

[node name="OptionsMargin" type="MarginContainer" parent="."]
unique_name_in_owner = true
visible = false
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -140.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/margin_left = 496
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 86

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsMargin"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Option1Button" type="Button" parent="OptionsMargin/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
focus_mode = 1
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 8
theme_override_styles/focus = ExtResource("5_yamgs")
theme_override_styles/hover = ExtResource("3_52afj")
theme_override_styles/pressed = ExtResource("4_im7rw")
theme_override_styles/normal = ExtResource("2_qm7ug")
text = " First"

[node name="Option2Button" type="Button" parent="OptionsMargin/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
focus_mode = 1
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 8
theme_override_styles/focus = ExtResource("5_yamgs")
theme_override_styles/hover = ExtResource("3_52afj")
theme_override_styles/pressed = ExtResource("4_im7rw")
theme_override_styles/normal = ExtResource("2_qm7ug")
text = "Second"

[node name="Option3Button" type="Button" parent="OptionsMargin/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
focus_mode = 1
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 8
theme_override_styles/focus = ExtResource("5_yamgs")
theme_override_styles/hover = ExtResource("3_52afj")
theme_override_styles/pressed = ExtResource("4_im7rw")
theme_override_styles/normal = ExtResource("2_qm7ug")
text = "Third"

[node name="Option4Button" type="Button" parent="OptionsMargin/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
focus_mode = 1
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 8
theme_override_styles/focus = ExtResource("5_yamgs")
theme_override_styles/hover = ExtResource("3_52afj")
theme_override_styles/pressed = ExtResource("4_im7rw")
theme_override_styles/normal = ExtResource("2_qm7ug")
text = "Fourth"

[node name="SpecialTextBoxMargin" type="MarginContainer" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -34.0
offset_right = 128.0
offset_bottom = 34.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="SpecialTextBoxMargin"]
layout_mode = 2
theme_override_styles/panel = ExtResource("2_1odcw")

[node name="MarginContainer" type="MarginContainer" parent="SpecialTextBoxMargin"]
layout_mode = 2
theme_override_constants/margin_top = 6
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="SpecialTextBoxMargin/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="TextStartLabel" type="Label" parent="SpecialTextBoxMargin/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 8
text = "*"
horizontal_alignment = 1

[node name="TextAreaLabel" type="Label" parent="SpecialTextBoxMargin/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(1, 1)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 8
text = "Sample Text. Sample Text. Sample Text. Sample Text. Sample Text. Sample Text. Sample Text. Sample Text. Sample Text. Sample Text. Sample Text. Sample Text. Sample Text. Sample Text. Sample Text. Sample Text. Sample Text. Sample Text. Sample Text. Sample Text. Sample Text. Sample Text. Sample Text. Sample Text. Sample Text. Sample Text. Sample Text. Sample Text. Sample Text. Sample Text. Sample Text."
autowrap_mode = 2
clip_text = true

[node name="TextEndLabel" type="Label" parent="SpecialTextBoxMargin/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_font_sizes/font_size = 8
text = "*"
horizontal_alignment = 1

[connection signal="pressed" from="OptionsMargin/VBoxContainer/Option1Button" to="." method="_on_option_button_pressed" binds= [0]]
[connection signal="pressed" from="OptionsMargin/VBoxContainer/Option2Button" to="." method="_on_option_button_pressed" binds= [1]]
[connection signal="pressed" from="OptionsMargin/VBoxContainer/Option3Button" to="." method="_on_option_button_pressed" binds= [2]]
[connection signal="pressed" from="OptionsMargin/VBoxContainer/Option4Button" to="." method="_on_option_button_pressed" binds= [3]]
